* Made comments italic (CSS bugfix). * Added line-highlighting to the source.tmpl file if we wanted to jump to an anchor.

--- a/src/style.css
+++ b/src/style.css
@@ -16,7 +16,7 @@ table.thecode {
           }
 .comment {
            color:grey;
-           font-decoration:italic;
+           font-style:italic;
            }
 .preproc {
                 color:#0000CC;
